--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Portfolio</a>
+                        <a href="portfolio.html">Portfolio</a>
                     </li>
                     <li>
                         <a href="#">Blog</a>
