--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="css/home-2.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,700,900' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,800italic,400,300' rel='stylesheet' type='text/css'>
 
