added domain name

--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>My name is Andrew Sullivan.  I am currently a senior at Loyola Marymount University pursuing a Bachelor's Degree in Computer Science.</h2>
-                    <p class="lead">For more information and work experience, <a target="_blank" href="resume.pdf">check out my résumé</a>.</p>
+                    <p class="lead">For more information and work experience, <a target="_blank" href="img/resume.pdf">check out my résumé</a>.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -324,7 +324,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Check out my website</h2>
-                    <a href="#" class="btn btn-lg btn-dark">Coming Soon!</a>
+                    <a href="index.html" class="btn btn-lg btn-dark">Go</a>
                 </div>
             </div>
         </div>
