--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/home-2.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
      <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -33,9 +33,8 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <!-- <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -45,7 +44,6 @@
                 </button>
                 <a class="navbar-brand" href="#">Andrew Sullivan</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
@@ -70,27 +68,54 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
-    </nav>
+    </nav> -->
 
     <!-- Page Content -->
-    <div class="intro-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5">
-                    <header>
-                        <div class = "header-1">Welcome</div>
-                        <div class = "header-1">To My</div>
-                        <div class = "header-1">Website</div>
-                    </header>
-                            <div class="intro">I am Andrew Sullivan, a senior at Loyola Marymount University majoring in Computer Science.  This website is a work in progress.  It contains my Portfolio and an upcoming blog.</div>                     
+    <div id="wrapper">
+
+    <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Andrew Sullivan
+                    </a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="intro-header">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-5">
+                                <header>
+                                    <div class = "header-1">Welcome</div>
+                                    <div class = "header-1">To My</div>
+                                    <div class = "header-1">Website</div>
+                                </header>
+                                        <div class="intro">I am Andrew Sullivan, a senior at Loyola Marymount University majoring in Computer Science.  This website is a work in progress.  It contains my Portfolio and an upcoming blog.</div> 
+                                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>                    
+                            </div>
+                        </div>
+                        <!-- /.row -->
+                    </div>
+                    <!-- /.container -->
                 </div>
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container -->
     </div>
 
     <!-- jQuery -->
@@ -98,6 +123,14 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Menu Toggle Script -->
+    <script>
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+    </script>
 
 </body>
 
