--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand">
+                <!-- <li class="sidebar-brand">
                     <a href="#">
                         Andrew Sullivan
                     </a>
-                </li>
-                <li>
+                </li> -->
+                <!-- li>
                     <a href="#">About</a>
                 </li>
                 <li>
@@ -90,7 +90,16 @@
                 </li>
                 <li>
                     <a href="#">Blog</a>
-                </li>
+                </li> -->
+                <li>
+                            <a href="https://www.facebook.com/andrew.sullivan.3323"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/atsullivan"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/AndrewSullivan2"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
+                        </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -107,7 +116,7 @@
                                     <div class = "header-1">Website</div>
                                 </header>
                                         <div class="intro">I am Andrew Sullivan, a senior at Loyola Marymount University majoring in Computer Science.  This website is a work in progress.  It contains my Portfolio and an upcoming blog.</div> 
-                                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>                    
+                                        <a href="#menu-toggle" class="btn btn-light btn-lg" id="menu-toggle" ><i class="fa fa-bars"></i></a>                    
                             </div>
                         </div>
                         <!-- /.row -->
@@ -126,6 +135,7 @@
 
     <!-- Menu Toggle Script -->
     <script>
+    $("#wrapper").toggleClass("toggled");
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
