--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The Big Picture - Start Bootstrap Template</title>
+    <title>Andrew Sullivan</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -78,11 +78,9 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <!-- <li class="sidebar-brand">
-                    <a href="#">
-                        Andrew Sullivan
-                    </a>
+                    Pages
                 </li> -->
-                <!-- li>
+                <li>
                     <a href="#">About</a>
                 </li>
                 <li>
@@ -90,16 +88,16 @@
                 </li>
                 <li>
                     <a href="#">Blog</a>
-                </li> -->
+                </li>
+                <!-- <li>
+                    <a href="https://www.facebook.com/andrew.sullivan.3323"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                </li>
                 <li>
-                            <a href="https://www.facebook.com/andrew.sullivan.3323"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/atsullivan"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/AndrewSullivan2"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
-                        </li>
+                   <a href="https://github.com/atsullivan"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/AndrewSullivan2"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
+                </li> -->
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -110,13 +108,13 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-5">
+                                <a href="#menu-toggle" class="btn btn-light btn-lg" id="menu-toggle"><i class="fa fa-bars fa-2x"></i></a> 
                                 <header>
                                     <div class = "header-1">Welcome</div>
                                     <div class = "header-1">To My</div>
                                     <div class = "header-1">Website</div>
                                 </header>
-                                        <div class="intro">I am Andrew Sullivan, a senior at Loyola Marymount University majoring in Computer Science.  This website is a work in progress.  It contains my Portfolio and an upcoming blog.</div> 
-                                        <a href="#menu-toggle" class="btn btn-light btn-lg" id="menu-toggle" ><i class="fa fa-bars"></i></a>                    
+                                <div class="intro">I am Andrew Sullivan, a senior at Loyola Marymount University majoring in Computer Science.  This website is a work in progress.  It contains my Portfolio and an upcoming blog.</div>                 
                             </div>
                         </div>
                         <!-- /.row -->
