--- a/index.html
+++ b/index.html
@@ -116,6 +116,23 @@
                                 </header>
                                 <div class="intro">I am Andrew Sullivan, a senior at Loyola Marymount University majoring in Computer Science.  This website is a work in progress.  It contains my Portfolio and an upcoming blog.</div>                 
                             </div>
+                            
+
+                            <div class="col-md-3">
+                                <ul class="sidebar-nav-right">
+                                    <li>
+                                        <a href="https://www.facebook.com/andrew.sullivan.3323"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                                    </li>
+                                    <li>
+                                       <a href="https://github.com/atsullivan"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/AndrewSullivan2"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
+                                    </li>
+                                    </ul>
+                            </div>
+
+
                         </div>
                         <!-- /.row -->
                     </div>
