fixed nabber from being cut off

--- a/index.html
+++ b/index.html
@@ -31,55 +31,12 @@
 </head>
 
 <body>
-
-    <!-- Navigation -->
-    <!-- <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Andrew Sullivan</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="#">Blog</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="https://www.facebook.com/andrew.sullivan.3323"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/atsullivan"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/AndrewSullivan2"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav> -->
-
     <!-- Page Content -->
     <div id="wrapper">
 
     <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <!-- <li class="sidebar-brand">
-                    Pages
-                </li> -->
                 <li>
                     <a href="#">About</a>
                 </li>
@@ -87,17 +44,8 @@
                     <a href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <div class = "last-item" href="#">Blog</div>
                 </li>
-                <!-- <li>
-                    <a href="https://www.facebook.com/andrew.sullivan.3323"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                </li>
-                <li>
-                   <a href="https://github.com/atsullivan"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/AndrewSullivan2"><i class="fa fa-linkedin-square fa-fw fa-3x"></i></a>
-                </li> -->
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
