--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <link href="css/index.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,700,900' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,800italic,400,300' rel='stylesheet' type='text/css'>
+
+    <!-- Custom Favicons -->
+    <link rel="shortcut icon" href="img/favicon2.ico">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
