--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,9 @@
     <!-- Custom Icons -->
     <link rel="stylesheet" href="fonts/font-mfizz-1.2/font-mfizz.css">
 
+    <!-- Custom Favicons -->
+    <link rel="shortcut icon" href="img/favicon3.ico">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
