changed last item so blog is clickable

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     <a href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <div class = "last-item" href="#">Blog</div>
+                    <a href="#">Blog</a>
+                    <div class = "last-item"></div>
                 </li>
             </ul>
         </div>
