--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,9 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
+            <!-- <li class="sidebar-brand">
                 <a href="#top">Andrew's Portfolio</a>
-            </li>
+            </li> -->
             <li>
                 <a href="#top">Home</a>
             </li>
