created 2 portfolio items and linked them

--- a/portfolio-item-1.html
+++ b/portfolio-item-1.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Portfolio Item - Start Bootstrap Template</title>
+    <title>CherAmi</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -66,8 +66,8 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item
-                    <small>Item Subheading</small>
+                <h1 class="page-header">CherAmi
+                    <small>A Social Network</small>
                 </h1>
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                <img class="img-responsive" src="img/portfolio/cher-ami-1.png" alt="">
             </div>
 
             <div class="col-md-4">
@@ -90,21 +90,22 @@
                     <li>Consectetur</li>
                     <li>Adipiscing Elit</li>
                 </ul>
+                <h3><a target="_blank" href="https://github.com/rtoal/cher-ami">See the code</a></h3>
             </div>
 
         </div>
         <!-- /.row -->
 
-        <!-- Related Projects Row -->
+        <!-- Other Projects Row -->
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Other Projects</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/portfolio/HilarysPortfolio.png" alt="">
                 </a>
             </div>
 
@@ -127,20 +128,7 @@
             </div>
 
         </div>
-        <!-- /.row -->
-
         <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
-
     </div>
     <!-- /.container -->
 
