--- a/portfolio.html
+++ b/portfolio.html
@@ -223,7 +223,7 @@
                                                 <figcaption>
                                                     <h3>CherAmi</h3>
                                                     <span>Social Network</span>
-                                                    <a href="https://github.com/rtoal/cher-ami">Take a look</a>
+                                                    <a href="portfolio-item-1.html">Take a look</a>
                                                 </figcaption>
                                             </figure>
                                         </li>
@@ -237,7 +237,7 @@
                                                 <figcaption>
                                                     <h3>Hilary's Portfolio</h3>
                                                     <span>A Cap Stone Portfolio for a teacher</span>
-                                                    <a href="https://github.com/atsullivan/HilarysPortfolio">Take a look</a>
+                                                    <a href="portfolio-item-2.html">Take a look</a>
                                                 </figcaption>
                                             </figure>
                                         </li>
