--- a/portfolio.html
+++ b/portfolio.html
@@ -237,7 +237,7 @@
                                                 <figcaption>
                                                     <h3>Hilary's Portfolio</h3>
                                                     <span>A Cap Stone Portfolio for a teacher</span>
-                                                    <a href="portfolio-item-2.html">Take a look</a>
+                                                    <a href="portfolio-item-2.htmlp">Take a look</a>
                                                 </figcaption>
                                             </figure>
                                         </li>
