added descriptions and removed filler pics

--- a/portfolio-item-1.html
+++ b/portfolio-item-1.html
@@ -47,7 +47,7 @@
                 <a class="navbar-brand" href="portfolio.html"><i class="fa fa-angle-double-left fa-2x"></i></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="#">About</a>
@@ -59,7 +59,7 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -87,13 +87,13 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+                <p>A Social Network that focuses on content sharing and organization of friends into circles.</p>
                 <h3>Project Details</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Post text, image, or video content</li>
+                    <li>Decide whether postings are free or paid</li>
+                    <li>Enable content locking and expiration</li>
+                    <li>Gain reputation via activity within the app</li>
                 </ul>
                 <h3><a target="_blank" href="https://github.com/rtoal/cher-ami">See the code</a></h3>
             </div>
@@ -114,7 +114,7 @@
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <!-- <div class="col-sm-3 col-xs-6">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
                 </a>
@@ -130,7 +130,7 @@
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
                 </a>
-            </div>
+            </div> -->
 
         </div>
         <hr>
