--- a/portfolio-item-2.html
+++ b/portfolio-item-2.html
@@ -47,7 +47,7 @@
                 <a class="navbar-brand" href="portfolio.html"><i class="fa fa-angle-double-left fa-2x"></i></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="#">About</a>
@@ -59,7 +59,7 @@
                         <a href="#">Contact</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -87,13 +87,12 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+                <p>An online Cap Stone portfolio designed for a teacher.</p>
                 <h3>Project Details</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>One Page</li>
+                    <li>Displays 10 Itasc Standard Documents</li>
+                    
                 </ul>
                 <h3><a target="_blank" href="https://github.com/atsullivan/HilarysPortfolio">See the code</a></h3>
             </div>
@@ -114,7 +113,7 @@
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <!-- <div class="col-sm-3 col-xs-6">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
                 </a>
@@ -130,7 +129,7 @@
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
                 </a>
-            </div>
+            </div> -->
 
         </div>
         <hr>
