--- a/portfolio-item-1.html
+++ b/portfolio-item-1.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="portfolio.html"><i class="fa fa-angle-double-left fa-2x"></i></a>
+                <a class="navbar-brand" href="portfolio.html"><i class="fa fa-angle-double-left"></i> My Portfolio</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
