changed file names and background of ports

--- a/CherAmi.html
+++ b/CherAmi.html
@@ -112,7 +112,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="portfolio-item-2.html">
+                <a href="HilarysPortfolio.html">
                     <img class="img-responsive portfolio-item" src="img/portfolio/HilarysPortfolio.png" alt="">
                 </a>
             </div>
