--- a/HilarysPortfolio.html
+++ b/HilarysPortfolio.html
@@ -111,7 +111,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="portfolio-item-1.html">
+                <a href="CherAmi.html">
                     <img class="img-responsive portfolio-item" src="img/portfolio/cher-ami-1.png" alt="">
                 </a>
             </div>
