--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="Vday/index.html">Blog</a>
                     <div class = "last-item"></div>
                 </li>
             </ul>
