took away blog href

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                     <a href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="Vday/index.html">Blog</a>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="Vday/index.html">H+A</a>
                     <div class = "last-item"></div>
                 </li>
             </ul>
