added/changed pics

--- a/Vday/landing/landing/landing-01/landing.html
+++ b/Vday/landing/landing/landing-01/landing.html
@@ -78,7 +78,7 @@
                 <div>
 
                     <div class="container">
-                        <h3><img src="img/hellolove.png" alt="..."></h3>
+                        <h3><img src="../../../images/hellolove.png" alt="..."></h3>
                         <div class="row v-center">
                            <!--  <div class="col-sm-3">
                                 <div>
@@ -164,7 +164,7 @@
             </section>
 
             <!-- content-23  -->
-            <section class="content-23  v-center bg-midnight-blue">
+            <!-- <section class="content-23  v-center bg-midnight-blue">
                 <div id="bgVideo" class="background"></div>
                 <div>
                     <div class="container">
@@ -177,7 +177,18 @@
                 </div>
                 <a class="control-btn fui-arrow-down" href="#"> </a>
             </section>
-
+ -->
+            <!-- content-23  -->
+            <section class="content-23 v-center bg-midnight-blue custom-bg2">
+                <div>
+                    <div class="container">
+                        <div class="hero-unit hero-unit-bordered">
+                            <h1>Videos</h1>
+                        </div>
+                    </div>
+                </div>
+                <a class="control-btn fui-arrow-down" href="#"> </a>
+            </section>
             <!-- content-8  -->
             <section class="content-8 v-center">
                 <div>
