overhaul on feed
feed intro, first link, added icons to nabber

--- a/Vday/home2.html
+++ b/Vday/home2.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>One Page Wonder - Start Bootstrap Template</title>
+    <title>H+A - Feed</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +18,7 @@
     <link href="css/home2.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
+    <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,400' rel='stylesheet' type='text/css'>
 
@@ -27,7 +28,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container"> 
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -40,9 +41,9 @@
 
        <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./">Photos</a></li>
-            <li><a href="./">Writing</a></li>
-            <li><a href="../navbar-fixed-top/">Videos</a></li>
+            <li><a href="./"><i class="fa fa-camera"></i> Photos</a></li>
+            <li><a href="./"><i class="fa fa-envelope-o"></i> Writing</a></li>
+            <li><a href="../navbar-fixed-top/"><i class="fa fa-play"></i> Videos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -58,25 +59,36 @@
         </div>
     </header>
 
-    <!-- Page Content -->
     <div class="container">
+        <hr class="featurette-divider">
+
+        <!-- Intro Featurette -->
+        <div class="featurette">
+            <h2 class="featurette-heading">Welcome to H+A, a website just for us.
+                <span class="text-muted">Below is the Feed</span>
+            </h2>
+            <p class="lead">Whenever I add new content, you will see it here, whether it be pictures of us, a letter for you, or a video.  You will also be able yto just visit a page with all of our photos, letters, or videos by using the buttons on the top right of the screen.  Since I just had this idea pretty recently and this website is young, the idea for it could change.  The basic idea for it, however, was to be a place where we can both go and combine all of our pictures, letters, and videos.</p>
+        </div>
 
         <hr class="featurette-divider">
 
+
+
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-responsive pull-right" src="images/hil.jpg" width="500" height="500">
+            <img class="featurette-image img-responsive pull-right" src="images/4.jpg" width="500" height="500">
             
-            <h2 class="featurette-heading">This First Heading
-                <span class="text-muted">Will Catch Your Eye</span>
+            <h2 class="featurette-heading">First Letter!
+                <span class="text-muted">Hapy Valentine's Day.</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">A small letter for you on this special day.  </p>
+            <a class="btn btn-large btn-clear" href="#"><i class="fa fa-envelope-o"></i> READ IT </a>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
-        <div class="featurette" id="services">
+        <!-- <div class="featurette" id="services">
             <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">The Second Heading
                 <span class="text-muted">Is Pretty Cool Too.</span>
@@ -84,10 +96,10 @@
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="featurette-divider"> -->
 
         <!-- Third Featurette -->
-        <div class="featurette" id="contact">
+        <!-- <div class="featurette" id="contact">
             <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">The Third Heading
                 <span class="text-muted">Will Seal the Deal.</span>
@@ -95,13 +107,13 @@
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="featurette-divider"> -->
 
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; atsullivan.github.io 2015</p>
                 </div>
             </div>
         </footer>
