--- a/Vday/landing/landing/landing-01/landing.html
+++ b/Vday/landing/landing/landing-01/landing.html
@@ -29,7 +29,7 @@
                     <div class="navbar col-sm-12" role="navigation">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="#">H+A</a>
+                            <a class="brand" href="../../../home2.html">H+A</a>
                          </div>
                         <!-- <div class="collapse navbar-collapse pull-right">
                             <ul class="nav pull-left">
@@ -120,9 +120,9 @@
                         <div class="col-sm-4"></div>
                         <div class="col-sm-4">
                           <hr class="small">
-                          <h3> 
+                          <h4> 
                             I love you more than words can ever express Hilary, but I am hoping that this might be a start.
-                          </h3>
+                          </h4>
                         </div>
                         <div class="col-sm-4"></div>
                     </div>
@@ -156,7 +156,7 @@
                             <div class="col-sm-6 col-sm-offset-3">
                                 <p>My greatest weakness may be my solitude.  Sometimes it is hard for me to express my feelings when we talk.  This will be a place where I can write them out for you.
                                 </p>
-                                <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a>
+                                <!-- <a class="btn btn-large btn-clear" href="#">TRY IT NOW</a> -->
                             </div>
                         </div>
                     </div>
