added first letter and several more nav buttons

--- a/Vday/home2.html
+++ b/Vday/home2.html
@@ -41,9 +41,9 @@
 
        <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./"><i class="fa fa-camera"></i> Photos</a></li>
-            <li><a href="./"><i class="fa fa-envelope-o"></i> Writing</a></li>
-            <li><a href="../navbar-fixed-top/"><i class="fa fa-play"></i> Videos</a></li>
+            <li><a href="#"><i class="fa fa-camera"></i> Photos</a></li>
+            <li><a href="#"><i class="fa fa-envelope-o"></i> Writing</a></li>
+            <li><a href="#"><i class="fa fa-play"></i> Videos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -82,7 +82,7 @@
                 <span class="text-muted">Hapy Valentine's Day.</span>
             </h2>
             <p class="lead">A small letter for you on this special day.  </p>
-            <a class="btn btn-large btn-clear" href="#"><i class="fa fa-envelope-o"></i> READ IT </a>
+            <a class="btn btn-large btn-clear" href="letters/2.14.15.html"><i class="fa fa-envelope-o"></i> READ IT </a>
         </div>
 
         <hr class="featurette-divider">
@@ -112,8 +112,11 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-9">
                     <p>Copyright &copy; atsullivan.github.io 2015</p>
+                </div>
+                <div class="col-sm-3">
+                  <a class="btn btn-large btn-clear" href="landing/landing/landing-01/landing.html">intro page</a>
                 </div>
             </div>
         </footer>
