password not working, temporarily disabled

--- a/Vday/index.html
+++ b/Vday/index.html
@@ -98,10 +98,11 @@
                 </div>
                 <div class="card__back">
                   <span class="card__text">
-                    <form class="form-signin" method="post" action="landing/landing/landing-01/landing.html">
+                    <!-- <form class="form-signin" method="post" action="landing/landing/landing-01/landing.html"> -->
+                    <form class="form-signin" method="post">
                       <label for="inputPassword" class="sr-only">Password</label>
                       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                      <button class="btn btn-lg" type="submit" >Sign in</button>
+                      <a class="btn btn-lg" href="landing/landing/landing-01/landing.html">Sign in</a>
                     </form>
                   </span>
                 </div>
