--- a/Vday/home2.html
+++ b/Vday/home2.html
@@ -54,7 +54,7 @@
         <div class="headline">
             <div class="container">
                 <h1>Hilary+Andrew</h1>
-                <h2>Pretty much the cutset couple in the world</h2>
+                <h2>Pretty much the cutest couple in the world</h2>
             </div>
         </div>
     </header>
