capitalized jpg for website

--- a/Vday/home2.html
+++ b/Vday/home2.html
@@ -67,7 +67,7 @@
             <h2 class="featurette-heading">Welcome to H+A, a website just for us.
                 <span class="text-muted">Below is the Feed</span>
             </h2>
-            <p class="lead">Whenever I add new content, you will see it here, whether it be pictures of us, a letter for you, or a video.  You will also be able yto just visit a page with all of our photos, letters, or videos by using the buttons on the top right of the screen.  Since I just had this idea pretty recently and this website is young, the idea for it could change.  The basic idea for it, however, was to be a place where we can both go and combine all of our pictures, letters, and videos.</p>
+            <p class="lead">Whenever I add new content, you will see it here, whether it be pictures of us, a letter for you, or a video.  You will also be able to just visit a page with all of our photos, letters, or videos by using the buttons on the top right of the screen.  Since I just had this idea pretty recently and this website is young, the idea for it could change.  The basic idea for it, however, was to be a place where we can both go and combine all of our pictures, letters, and videos.</p>
         </div>
 
         <hr class="featurette-divider">
@@ -76,7 +76,7 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-responsive pull-right" src="images/4.jpg" width="500" height="500">
+            <img class="featurette-image img-responsive pull-right" src="images/4.JPG" width="500" height="500">
             
             <h2 class="featurette-heading">First Letter!
                 <span class="text-muted">Hapy Valentine's Day.</span>
