fixed index.html's button placement
some typos/colors

--- a/Vday/home2.html
+++ b/Vday/home2.html
@@ -79,7 +79,7 @@
             <img class="featurette-image img-responsive pull-right" src="images/4.JPG" width="500" height="500">
             
             <h2 class="featurette-heading">First Letter!
-                <span class="text-muted">Hapy Valentine's Day.</span>
+                <span class="text-muted">Happy Valentine's Day.</span>
             </h2>
             <p class="lead">A small letter for you on this special day.  </p>
             <a class="btn btn-large btn-clear" href="letters/2.14.15.html"><i class="fa fa-envelope-o"></i> READ IT </a>
