--- a/Vday/index.html
+++ b/Vday/index.html
@@ -87,7 +87,8 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-7"></div>
+        <div class="col-md-5">
           <div class="section">
             <div class="section__content clearfix">
               <div class="card effect__hover">
@@ -128,7 +129,7 @@
 
     <script language="javascript">
       $('form').on('submit',function(){
-       if($('#inputPassword').val()==("a")){
+       if($('#inputPassword').val()==("cocoa")){
            return true;
        }
        else alert('Incorrect');
