added home button

--- a/Vday/home2.html
+++ b/Vday/home2.html
@@ -116,7 +116,8 @@
                     <p>Copyright &copy; atsullivan.github.io 2015</p>
                 </div>
                 <div class="col-sm-3">
-                  <a class="btn btn-large btn-clear" href="landing/landing/landing-01/landing.html">intro page</a>
+                  <a class="btn btn-large btn-clear" href="landing/landing/landing-01/landing.html">Intro Page</a>
+                  <a class="btn btn-large btn-clear" href="index.html">Logout</a>
                 </div>
             </div>
         </footer>
