style changes to letter

--- a/Vday/letters/2.14.15.html
+++ b/Vday/letters/2.14.15.html
@@ -52,6 +52,7 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
         <div class="title">Happy Valentine's Day</div>
+
         
         <p>Dear Hilary, Happy Valentine’s Day!  I am really hoping that we get to talk sometime this morning.  I hope that your day is going well so far.  I was thinking the other day, we haven’t sent each other letters even once this semester.  That is just tragic.  Although I couldn’t get one in the mail to you in time for today, I thought this would be the next best thing.</p>
 
@@ -65,7 +66,10 @@
 
         <p>Anyway, I miss you so much my love, and I can’t wait to talk to you again.  I love you more than words can describe.</p>
 
-        <p>Love, Andrew</p>
+        <div class="signature">
+        <p>Forever Yours,</p> 
+        <p>Andrew</p>
+        </div>
         </div>
         <div class="col-md-2"></div>
       </div>
