Added coming soon blog page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="blog.html">Blog</a>
                 </li>
                 <li>
                     <a href="Vday/index.html">H+A</a>
