--- a/portfolio.html
+++ b/portfolio.html
@@ -249,9 +249,9 @@
                                             <figure>
                                                 <img src="img/portfolio-3.jpg" alt="img01">
                                                 <figcaption>
-                                                    <h3>PHOE.NIX</h3>
-                                                    <span>A new programming language</span>
-                                                    <a href="https://github.com/florton/PHOE.NIX">Take a look</a>
+                                                    <h3>Ludus</h3>
+                                                    <span>An online fitness tracker</span>
+                                                    <a href="https://github.com/atsullivan/Ludus">Take a look</a>
                                                 </figcaption>
                                             </figure>
                                         </li>
