changed site folder name to fix error

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       <div class="bg a0" data-animate="fadeIn">
                         <h3 class="a1" data-animate="fadeInDown">Blog</h3>
                         <a href="assets/img/tiles/blog2.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-arrows-alt"></i></a>
-                        <a href="jekyll/_site/index.html" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-search"></i></a>
+                        <a href="jekyll/site/index.html" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-search"></i></a>
                       </div>
                     </div>   
                   </div>
