--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class="sidebar-footer">
                       <a href="#"> 
-                          degsinger | athlete | Engineer
+                          designer | athlete | Engineer
                       </a>
                     </li>
                   </ul>
